<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<artifactId>uni-resolver-driver-did-btcr2</artifactId>
	<packaging>${packaging.type}</packaging>
	<name>uni-resolver-driver-did-btcr2</name>
	<version>0.6-SNAPSHOT</version>

	<parent>
		<groupId>decentralized-identity</groupId>
		<artifactId>uni-resolver</artifactId>
		<version>1.2.0</version>
	</parent>

	<scm>
		<url>https://github.com/decentralized-identity/uni-resolver-driver-did-btcr2</url>
		<connection>scm:git:git://github.com/decentralized-identity/uni-resolver-driver-did-btcr2.git</connection>
		<developerConnection>scm:git:git@github.com:decentralized-identity/uni-resolver-driver-did-btcr2.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<repositories>
		<repository>
			<id>danubetech-maven-public</id>
			<url>https://repo.danubetech.com/repository/maven-public/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>

		<!-- Dependency Versions -->

		<jcl-over-slf4j.version>2.0.17</jcl-over-slf4j.version>
		<log4j-slf4j2-impl.version>2.25.1</log4j-slf4j2-impl.version>
	</properties>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<packaging.type>jar</packaging.type>
			</properties>
		</profile>
		<profile>
			<id>ci</id>
			<properties><packaging.type>jar</packaging.type></properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-enforcer-plugin</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<id>enforce-no-snapshots</id>
								<goals>
									<goal>enforce</goal>
								</goals>
								<configuration>
									<rules>
										<requireReleaseDeps>
											<message>No Snapshots Allowed!</message>
										</requireReleaseDeps>
									</rules>
									<fail>true</fail>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>war</id>
			<properties>
				<packaging.type>war</packaging.type>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.eclipse.jetty</groupId>
						<artifactId>jetty-maven-plugin</artifactId>
						<version>11.0.25</version>
						<configuration>
							<jettyXmls>
								${basedir}/src/test/resources/jetty.xml
							</jettyXmls>
							<useTestScope>true</useTestScope>
							<httpConnector>
								<port>8080</port>
							</httpConnector>
							<systemProperties>
								<systemProperty>
									<name>slf4j</name>
									<value>true</value>
								</systemProperty>
								<systemProperty>
									<name>log4j2.configurationFile</name>
									<value>file:${basedir}/src/test/resources/log4j2-test.properties</value>
								</systemProperty>
							</systemProperties>
							<webApp>
								<contextPath>/</contextPath>
								<jettyEnvXml>
									${basedir}/src/test/resources/jetty-env.xml
								</jettyEnvXml>
								<webInfIncludeJarPattern>^$</webInfIncludeJarPattern>
								<containerIncludeJarPattern>^$</containerIncludeJarPattern>
							</webApp>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.19.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.19.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${jcl-over-slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>${log4j-slf4j2-impl.version}</version>
		</dependency>
		<dependency>
			<groupId>decentralized-identity</groupId>
			<artifactId>uni-resolver-driver</artifactId>
		</dependency>
		<dependency>
			<groupId>com.danubetech</groupId>
			<artifactId>key-formats-java</artifactId>
			<version>1.22.0</version>
		</dependency>
		<dependency>
			<groupId>com.danubetech</groupId>
			<artifactId>data-integrity-java</artifactId>
			<version>1.17.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.ipfs</groupId>
			<artifactId>java-ipfs-http-client</artifactId>
			<version>1.4.4</version>
		</dependency>
		<dependency>
			<groupId>wf.bitcoin</groupId>
			<artifactId>bitcoin-rpc-client</artifactId>
			<version>1.2.4</version>
		</dependency>
		<dependency>
			<groupId>fr.acinq.bitcoin</groupId>
			<artifactId>bitcoin-kmp-jvm</artifactId>
			<version>0.25.1</version>
		</dependency>
		<dependency>
			<groupId>fr.acinq.secp256k1</groupId>
			<artifactId>secp256k1-kmp-jni-jvm</artifactId>
			<version>0.19.0</version>
		</dependency>
		<dependency>
			<groupId>com.apicatalog</groupId>
			<artifactId>copper-multicodec</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.19.0</version>
		</dependency>
		<dependency>
			<groupId>io.leonard</groupId>
			<artifactId>base58</artifactId>
			<version>0.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.14</version>
		</dependency>
		<dependency>
			<groupId>com.github.java-json-tools</groupId>
			<artifactId>json-patch</artifactId>
			<version>1.13</version>
		</dependency>
	</dependencies>

</project>
